--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>철수가 작업함</title>
 </head>
 <body>
+    <header>헤더를 작업함</header>
     <p1>p1 추가함 </p1>
     <footer>푸터 작업 완료</footer>
 </body>
